Fix page alignment plus responsiveness

--- a/src/components/AppsList/AppsList.css
+++ b/src/components/AppsList/AppsList.css
@@ -4,26 +4,20 @@
   grid-gap: 1rem;
 }
 
-@media only screen and (min-device-width: 901px) and (max-width: 1100px) {
+@media only screen and (max-width: 1100px) and (min-width: 901px) {
   .AppList {
-    display: grid;
-    gap: 1rem;
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media only screen and (min-device-width: 641px) and (max-width: 900px) {
+@media only screen and (max-width: 900px) and (min-width: 481px) {
   .AppList {
-    display: grid;
-    gap: 1rem;
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media only screen and (min-device-width: 480px) and (max-width: 640px) {
+@media only screen and (max-width: 480px) {
   .AppList {
-    display: grid;
-    gap: 1rem;
     grid-template-columns: repeat(1, 1fr);
   }
 }
