--- a/src/components/UserProjectsPage/UserProjectsPage.css
+++ b/src/components/UserProjectsPage/UserProjectsPage.css
@@ -36,18 +36,21 @@
   margin-left: 0;
 }
 
-@media only screen and (min-device-width: 641px) and (max-width: 900px) {
+
+@media only screen and (max-width: 1100px) and (min-width: 901px) {
   .ProjectList {
-    display: grid;
-    gap: 1rem;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media only screen and (max-width: 900px) and (min-width: 481px) {
+  .ProjectList {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media only screen and (min-device-width: 480px) and (max-width: 640px) {
+@media only screen and (max-width: 480px) {
   .ProjectList {
-    display: grid;
-    gap: 1rem;
     grid-template-columns: repeat(2, 1fr);
   }
 }
